rust/kcl-lib/tests/sketch_block_on_face/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing sketch_block_on_face.kcl
---
KCL Semantic error

  × semantic: The `sketch block` function expected its `on` argument to be
  │ Plane but it's actually of type tagged edge
    ╭─[13:13]
 12 │ 
 13 │ sketch(on = side) {
    ·             ──┬─
    ·               ╰── tests/sketch_block_on_face/input.kcl
 14 │   // Square
    ╰────
